test/cases/good/extra004.lat
int main() {
    while(false) { error(); }
    while(false) error();
    if (false) { error(); }
    if (false) error();

    return 0;
}