test/cases/bad/bad061.lat
// Return void

int main() {
    return 0;
}

void f() {
    return g();
}

void g() {
}
